@@ -14,7 +14,6 @@
 
 import keras
 
-from autokeras.blocks.basic import BertBlock
 from autokeras.blocks.basic import ConvBlock
 from autokeras.blocks.basic import DenseBlock
 from autokeras.blocks.basic import EfficientNetBlock
