@@ -28,7 +28,6 @@ classifiers = [
 dependencies = [
     "packaging",
     "keras-tuner>=1.4.0",
-    "keras-nlp>=0.8.0",
     "keras>=3.0.0",
     "dm-tree",
 ]
