@@ -4,3 +4,5 @@ Removed TensorFlow Dataset support.
 Only support numpy array data.
 Removed image from data and text from data.
 added back the structured data api.
+
+removed bertblock and added embedding block.
